# import-lint

./: Cargo.toml  README.ja.md  README.md
.claude/skills/manager/: SKILL.md
.github/workflows/: ci.yml  release.yml  vscode-release.yml
crates/cli/: Cargo.toml
crates/cli/src/: docs.rs  init.rs  lib.rs  main.rs  overlay.rs  report.rs  runner.rs  setup.rs  source_type.rs  timing.rs  walk.rs  watch.rs
crates/cli/src/lsp/: convert.rs  mod.rs
crates/cli/src/output/: eslint_json.rs  github.rs  mod.rs  pretty.rs
crates/cli/tests/: cli.rs  conformance.rs  docs.rs  init.rs  inspect.rs  lsp.rs  pipeline.rs  watch.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: extract.rs
crates/core/src/: config.rs  diagnostics.rs  graph.rs  lib.rs
crates/core/src/extract/: jsdoc.rs  mod.rs  module_info.rs
crates/core/src/resolve/: builtins.rs  mod.rs  package_json.rs  provenance.rs
crates/core/src/rule/: in_package.rs  mod.rs  options.rs
crates/core/tests/: extract_forms.rs  resolve.rs
crates/gen-fixture/: Cargo.toml
crates/gen-fixture/src/: lib.rs  main.rs
docs/: PLAN-docs.md  PLAN-init.md  PLAN-lsp.md  PLAN-npm.md  PLAN-v1.md  PLAN.md  RELEASING.md  benchmarks.md
docs/guides/: adoption.md  concepts.md  tutorial.md
docs/research/: eslint-plugin-import-access-spec.md  oxc-ecosystem.md  spike-s1-star-exports.md  spike-s2-jsdoc-attachment.md  spike-s3-resolver-provenance.md  spike-s4-export-assignment.md  spike-s5-watch-wsl2.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  locator.d.ts  locator.js
editors/vscode/test/: locator.test.js
npm/import-lint/: README.md  package.json
npm/import-lint/test/: shim.test.js
npm/platform/darwin-arm64/: README.md  package.json
npm/platform/darwin-x64/: README.md  package.json
npm/platform/linux-arm64-gnu/: README.md  package.json
npm/platform/linux-x64-gnu/: README.md  package.json
npm/platform/linux-x64-musl/: README.md  package.json
npm/platform/win32-x64/: README.md  package.json
npm/scripts/: assemble.mjs  smoke.mjs
scripts/: bench.sh
skills/import-lint/: SKILL.md
tests/conformance/: README.md
tests/conformance/expected/: default-importability-package-exclude-source-patterns.json  default-importability-package.json  default-importability-private-self-reference-internal.json  default-importability-private.json  index-loophole-false-filename-loophole-true.json  index-loophole-false.json  manifest.json  package-directory-all-star.json  package-directory-no-internal-filename-loophole.json  package-directory-no-internal.json  package-directory-packages-glob.json
tests/conformance/oracle/: generate-snapshots.mjs
