[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/gen-fixture"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.1.6"
license = "MIT"
repository = "https://github.com/uhyo/import-lint"

[workspace.dependencies]
# oxc toolchain — pre-1.0, pinned to exact versions (see docs/PLAN-v1.md D10 and
# docs/research/oxc-ecosystem.md). Bump deliberately, re-verify APIs on upgrade.
oxc_allocator = { version = "=0.139.0", features = ["pool"] }
oxc_ast = "=0.139.0"
oxc_diagnostics = "=0.139.0"
oxc_jsdoc = "=0.139.0"
oxc_parser = "=0.139.0"
oxc_resolver = "=11.23.0"
oxc_semantic = { version = "=0.139.0", features = ["jsdoc"] }
oxc_span = { version = "=0.139.0", features = ["serialize"] }
# `CompactStr` lives in oxc_str, not oxc_span, as of 0.139.0 (oxc-ecosystem.md
# assumed the latter; see M1 final report for the divergence note).
oxc_str = { version = "=0.139.0", features = ["serialize"] }

# Other dependencies anticipated by docs/PLAN-v1.md (not oxc, so caret ranges are fine).
clap = { version = "4.6", features = ["derive"] }
# std::fs::canonicalize returns \\?\-verbatim paths on Windows, inside which
# std's Path parser treats `/` as a literal character; since the resolver
# joins with `/`, verbatim graph keys break every directory comparison in the
# rule engine. dunce::canonicalize strips the verbatim prefix when safe.
dunce = "1.0"
globset = "0.4"
ignore = "0.4"
jsonc-parser = "0.33"
nodejs-built-in-modules = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
# Watch mode (M6, PLAN-v1.md §7 / D-W2): pinned exact, like the oxc deps, since a
# notify major bump can change the event/watcher API shape.
notify = "=8.2.0"
notify-debouncer-full = { version = "=0.7.0", default-features = false }
# LSP server (M8/L2, docs/PLAN-lsp.md §2, decision D-L1): `lsp-types` pinned exact —
# 0.96+ replaced `url::Url` with a fluent-uri newtype that has no `to_file_path()`,
# which our URI<->path conversion (`crates/cli/src/lsp/convert.rs`) needs; 0.95.1
# is the last release keeping `url::Url` and covers every LSP feature we use.
lsp-server = "0.9"
lsp-types = "=0.95.1"
crossbeam-channel = "0.5"
# Benchmarking only (M7, PLAN-v1.md §8): `criterion` is a dev-dependency of `core`'s
# `benches/extract.rs`, never a runtime dependency of any shipped crate.
criterion = "0.5"
