[package]
name = "import_lint_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "import_lint_cli"
path = "src/lib.rs"

[[bin]]
name = "import-lint"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ignore = { workspace = true }
import_lint = { path = "../core" }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_str = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Dev-only, for the M7 watch-cycle timing test (`tests/watch.rs`): generates a
# synthetic 10k-file tree via the library function, not the binary.
gen-fixture = { path = "../gen-fixture" }
tempfile = { workspace = true }
