[package]
name = "import-lint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine of import-lint: JSDoc @package/@private import access analysis on oxc"
keywords = ["lint", "typescript", "javascript", "jsdoc", "oxc"]
categories = ["development-tools"]
readme = "README.md"

[lib]
name = "import_lint"
path = "src/lib.rs"

[dependencies]
globset = { workspace = true }
jsonc-parser = { workspace = true, features = ["serde"] }
nodejs-built-in-modules = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_jsdoc = { workspace = true }
oxc_parser = { workspace = true }
oxc_resolver = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dunce = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "extract"
harness = false
