[package]
name = "gen-fixture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "gen_fixture"
path = "src/lib.rs"

[[bin]]
name = "gen-fixture"
path = "src/main.rs"

# Intentionally zero dependencies (not even `clap`/`rand`): this is a dev-only
# fixture generator (PLAN-v1.md §8), not part of the shipped `import-lint` binary or
# the `import_lint` library, so it doesn't affect the product's dependency graph.
# CLI args are parsed by hand; randomness comes from a tiny inline LCG (see
# `src/lib.rs`'s `Lcg`) — deterministic and dependency-free.
[dependencies]
